--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Images/profile pic.jpg" alt="Divyansh profile pic" height="350px" width="300px"></td>
+            <td><img src="profile pic.jpg" alt="Divyansh profile pic" height="350px" width="300px"></td>
             <td><h1>Divyansh Kumawat</h1>
                 <p><em><strong>WEB DEVELOPER</strong></em></p>
                 <p>Hello everyone, myself Divyansh Kumawat and I'm a web developer and currently I'm pursuing BTech(Computer Science) at <a href="https://jecrcuniversity.edu.in/">JECRC University</a>. Highly motivated and enthusiastic graduate seeking an entry-level position in the field of Computer Science.
